[tool.poetry]
name = "image-process-package"
version = "0.1.0"
description = ""
authors = ["modelosdedados <modelosdedados@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
scikit-image = "^0.24.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
